@@ -147,15 +147,15 @@ DW \\
 {\tt\begin{tabbing}
 \hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
 DB         \> DD          \> DQ          \> DS          \> DT \\
-DW \\
+DW         \> REG \\
 \end{tabbing}}
 
 \subsubsection{Intel MCS-(2)51}
 {\tt\begin{tabbing}
 \hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
 BIGENDIAN  \> BIT         \> DB          \> DD          \> DQ \\
-DS         \> DT          \> DW          \> PORT        \> SFR \\
-SFRB       \> SRCMODE \\
+DS         \> DT          \> DW          \> PORT        \> REG \\
+SFR        \> SFRB        \> SRCMODE \\
 \end{tabbing}}
 
 \subsubsection{Intel MCS-96}
