@@ -2140,7 +2140,7 @@ necessary.  Which is the essence you should learn from this section?
 \section{Register Symbols}
 \label{SectRegSyms} \ttindex{register symbols}
 
-{\em valid for: PowerPC, M-Core, 4004/4040, 80C16x, AVR, XS1, Z8}
+{\em valid for: PowerPC, M-Core, 4004/4040, MCS-48/(2)51, 80C16x, AVR, XS1, Z8}
 
 Sometimes it is desirable not only to assign symbolic names to memory
 addresses or constants, but also to a register, to emphasize its function
