@@ -1,5 +1,9 @@
-$Id: changelog,v 1.114 2015/10/28 17:55:33 alfred Exp $
+$Id: changelog,v 1.117 2016/02/07 16:02:37 alfred Exp $
 ------------------------------------------------------------------------------
+
+2016-02-07 [1.42 Bld 107]
+
+- Addition    : Allow register symbols on MCS-48/(2)51
 
 2015-10-28 [1.42 Bld 106]
 
